# pw-reprezentacje-wiedzy

./: .gitattributes  .gitignore  README.md
app/: .gitattributes  OPEN_THIS_IN_VISUAL_STUDIO.txt  PUBLISH_MAC_CROSS_GUI.sh  README.md  RUN_CLI_EXAMPLE.bat  RUN_CROSS_GUI.bat  RUN_GUI.bat  URUCHOMIENIE.txt  run_examples_folder.sh
app/docs/: ARCHITECTURE.md  CONDITIONAL_CAUSE_FIX.md  CSHARP_TESTS.md  EXAMPLES_FROM_FOLDER.md  GUI_FIXES.md  GUI_LAYOUT_AND_NEWLINES_FIX.md  IMPLEMENTATION_NOTES.md
app/examples/: README.txt  nie_extra_03_noop_goal_false.domain  nie_extra_04_conflict_not_necessary.domain  nie_extra_05_missing_condition.domain  nie_extra_05_missing_condition.query  nie_extra_06_always_blocks_action.domain  nie_extra_07_partial_necessary_executable.domain  nie_extra_07_partial_necessary_executable.query  (+45 more)
checkpoint1/: checkpoint1_v2.tex  checkpoint1_v3.tex
checkpoint2/: Untitled  checkpoint2_v2.tex
checkpoint3/: DESIGN.md
checkpoint3/python/: DESIGN_python.md  pyproject.toml
checkpoint3/python/ds4/action_lang/: __init__.py  states.py  transitions.py
checkpoint3/python/gui/: __init__.py
checkpoint3/python/packaging/: ds4.spec
checkpoint3/python/tests/: test_compound.py  test_e2e.py  test_formula.py  test_process.py  test_states.py
docs/: bibliografia.tex  ckpt01_preliminary.tex  ckpt02_theory-v2.tex  ckpt02_theory.tex  ckpt04_contribution.tex  ckpt04_technical.tex  ckpt04_user-manual.tex
other/: PRESENTATION.md  _export_pdf.py  _presentation_render.html  checkpoint3.md
projekt4/: PLAN.md  README.md  cheatsheet-projekt4.md  projekt-4.md
(+518 files in other folders)
