[project]
name = "ds4"
version = "0.1.0"
description = "DS4 Reasoner — procesy działań złożonych"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ds4*", "gui*"]

[tool.setuptools.package-data]
"ds4.examples" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
